Updated README and fixed alignment of the send icon

--- a/chatterbox/src/App.css
+++ b/chatterbox/src/App.css
@@ -155,6 +155,7 @@ h1 {
 
 .sendButton {
   cursor: pointer;
+  margin-top: -15px;
 }
 
 .messages {
